# Unitree-bot

./: .gitignore  .gitignore_github  .gitmodules  ANALYSIS_COMPLETE.txt  ANALYSIS_COMPLETE_FINAL_REPORT.md  AP to STA-L.pcapng  AP_MODE_IMPLEMENTATION.md  ARCHITECTURE_FLOW.md  ARM_TEACHING_GUIDE.md  BOOT_SEQUENCE_ANALYSIS.md  CAPTURE_ON_WINDOWS.md  CHANGES.md  CLEANUP_COMPLETE.md  CLOUD_CHECKLIST.sh  CMakeLists.txt  CODE_PCAP_CORRELATION_SUMMARY.md  COMMAND_REFERENCE_FOR_WSL.md  COMPLETE_XOR_KEY_ANALYSIS.md  CONNECTION_PROOF.md  DELETE_RENAME_IMPLEMENTATION.md  DISCOVERY_EXPLAINED.md  DISCOVERY_SUMMARY.md  DOCUMENTATION_INDEX.md  ENCRYPTION_AND_PORT_DISCOVERY_ANALYSIS.md  ENCRYPTION_BREAKTHROUGH.md  ENCRYPTION_RESEARCH_FINDINGS.md  FINAL_SUMMARY.md  FINDINGS.md  FSM_STATES_REFERENCE.md  FSM_STATE_CORRECTION.md  G1_6937_INVESTIGATION.md  G1_AIR_CONTROL_GUIDE.md  G1_CONNECTION_STATUS.sh  GITHUB_UPLOAD_GUIDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.txt  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_VISUAL_SUMMARY.md  INTEGRATION_COMPLETE.md  LIDAR_BREAKTHROUGH.md  (+267 more)
.github/: copilot-instructions.md
G1_tests/: QUICK_REFERENCE.md  README.md  robot_test_helpers.py  run_all_tests.sh  watch_gesture_simple.py
_scripts/: diagnose_dds.sh
data/: maps_config.json
docs/: README.md
g1_app/: CAPTURE_ANDROID_APP_GUIDE.md  DEVELOPMENT_GUIDE.md  INSTALLATION.md  PCAPdroid_26_Jan_10_28_24.pcap  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  SYSTEM_READY.md  TEACHING_MODE_API_FINDINGS.md  TESTING_REPORT.md  VELOCITY_CONTROL.md  VELOCITY_FIX.md  __init__.py  analyze_button_logic.py  arm_controller.py  cli_test.py  run_mock_tests.sh  teaching mode.pcapng  test_api.sh  test_final_integration.py  test_mock_server.py  test_velocity_normalization.py  test_websocket_client.py
g1_tests/: QUICK_REFERENCE.md  README.md  manual_arm_control.py  slam_map_viewer.py  verify_sdk_integration.py
scripts/: bootstrap.sh  (+2 more)
(+236 files in other folders)
